force-app/main/default/objects/Communication_Template__c/fields/Send_Order__c.field-meta.xml
<CustomField>
    <fullName>Send_Order__c</fullName>
    <description>Order in which communication occurs</description>
    <label>Send Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>