force-app/main/default/objects/Communication_Template__c/fields/Vendor_Program__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Program</label>
    <referenceTo>Vendor_Customization__c</referenceTo>
    <relationshipName>Onboarding_Communication_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>